Fix: header blocking home-content on mobile

--- a/style.css
+++ b/style.css
@@ -622,15 +622,7 @@ img {
         text-align: center;
     }
 }
-@media (max-width: 768px) {
-    .about {
-        padding-top: 120px;
-    }
-}
 
-.home, .about {
-    padding-top: 150px;
-}
 
 
 
@@ -641,25 +633,21 @@ section {
 
 
 
+
+
 .home, .about, .education, .projects, .contact-form {
-    padding-top: 150px; 
+    padding-top: 120px; 
 }
 
 
 @media (max-width: 768px) {
     .home, .about, .education, .projects, .contact-form {
-        padding-top: calc(100px + 20px); 
-    }
-    
-    .header {
-        height: auto;
-        padding: 20px 5%;
+        padding-top: 160px; /
     }
 }
 
+
     
-    section {
-        scroll-margin-top: 120px;
-    }
+   
 
 
